<resources>
    <string name="app_name">Pizza Mart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rePassword">Retype Password</string>
    <string name="btnSignUp">Register</string>
    <string name="btnSignIn">Login</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="favorites">Favorites</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="name_of_food">Name of Food</string>
    <string name="food_price">Food Price</string>
    <string name="food_image">Food Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_image">cart image</string>
    <string name="burger_menu_image">burger menu image</string>
    <string name="total_price">Total Price:</string>
    <string name="_0">0</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="about_text">About Ryzen 4</string>
    <string name="mission">Mission</string>
    <string name="vision">Vision</string>
    <string name="txt_mission">To deliver exceptional Asian dining experiences by building an organization where people are inspired to better their lives.</string>
    <string name="txt_vision">We envision a community where everyone has access to good quality, nutritious food, understands the consequences of hunger and poor nutrition</string>
    <string name="qty">Qty:</string>
    <string name="_1">1</string>
    <string name="welcome">Welcome User 123!</string>
    <string name="leader">Michael John Paje</string>
    <string name="Member1">Elijah Rei Ferreria</string>
    <string name="Member2">Charles Dominic Narag</string>
    <string name="Member3">Camille Monis</string>
    <string name="abouttext">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer viverra, neque id congue tincidunt, sapien erat elementum erat, at feugiat lectus risus et nisi. Vestibulum non pulvinar nulla. Sed pretium est at elementum elementum. Pellentesque porttitor sit amet nisi nec pulvinar. Donec ultrices elit elit, vel malesuada ligula viverra consectetur.</string>
    <string name="my_cart">My Cart</string>
    <string name="checkoutBtn">Checkout</string>
    <string name="address" />
    <string name="city" />
    <string name="zipcode" />
    <string name="_500">500</string>
    <string name="placeholder">Placeholder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="image">image</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="php">PHP</string>
    <string name="u20b1">₱</string>
    <string name="menu_image" />
    <string name="the_restaurant_is_preparing_your_order">The Restaurant is preparing your order!</string>
    <string name="the_rider_has_picked_up_your_order">The rider has picked up your order!</string>
    <string name="the_rider_is_on_the_way_please_sit_back_and_relax">The rider is on the way, please sit back and relax!</string>
    <string name="name">Name</string>
</resources>