<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/username"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSignUp"
        android:backgroundTint="#FEFEFE"
        android:textColor="#29AE61"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSignIn"
        android:backgroundTint="#FEFEFE"
        android:textColor="#29AE61"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/btnSignUp"/>

</RelativeLayout>