<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/rz"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="50dp"
        android:layout_below="@id/logo_image"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/username"/>

    <EditText
        android:id="@+id/rePassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rePassword"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSignUp"
        android:backgroundTint="#FEFEFE"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_white"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/rePassword"/>


</RelativeLayout>